cập nhật: thêm api-gateway và authentication service (chưa test!)